# stoffy

./: .gitignore  AGENTS.md  README.md  conda-lock.yml  consciousness.md  consciousness.yaml  debate_about_consciousness.md  environment.yml  hey.md  pyproject.toml
.claude/agents/: intake-processor.md
.claude/commands/: commit.md  create-thinker.md  debate.md  debate_memory.md  improve.md  ingest.md  learn.md
.claude/skills/: intake.md
_input/: knowledge-structure-thought.txt
_intake/archive/: 2025-01-04_attention-consciousness.txt  2025-01-04_xxx.md
_intake/processed/: log.yaml
archive/legacy_dev/: .checkov.yaml  .pre-commit-config.yaml  Brewfile  Makefile  conda-lock.yml  environment.yml  opencode.jsonc  pyproject.toml
archive/legacy_indices/: agents_index.yaml  ideas.yaml  organization.yaml  people.yaml  projects.yaml  tickets.yaml
archive/legacy_templates/: agents_index.yaml  calendar_event.md  contribution_summary.md  experiment_report.md  meeting_template.md  person_notes.md  person_profile.md  person_references.md  person_thoughts.md  project_idea.md  project_progress_report.md  ticket.md  todo_item.md  (+1 more)
consciousness/: README.md  __init__.py  __main__.py  autonomous_executor.py  config.py  consciousness_forwarder.py  daemon.py  display.py  executor.py  fallback.py  fallback_router.py  fallback_system.py  gemini_consciousness.py  lm_studio_detector.py  pytest.ini  responder.py  response_synthesizer.py  self_write_tracker.py  state.py  task_intent.py  thinker.py  user_message.py  validate.py  watcher.py  watcher_git.py
docs/: fallback_system.md  philosophy_integration_architecture.md  philosophy_integration_usage.md
docs/consciousness-research/implementation/consciousness/: __init__.py  __main__.py  config.py  consciousness.yaml  orchestrator.py  pyproject.toml
docs/consciousness-research/implementation/consciousness/decision/: __init__.py  evaluator.py  goals.py
docs/consciousness-research/implementation/consciousness/execution/: __init__.py  claude_api.py  task_queue.py
docs/consciousness-research/implementation/consciousness/inference/: __init__.py  lm_studio.py
docs/consciousness-research/implementation/consciousness/observers/: __init__.py  filesystem.py
docs/consciousness-research/implementation/consciousness/state/: __init__.py  database.py
indices/: AGENTS.md  archive.yaml  folders.yaml  intake.yaml  knowledge.yaml  root.yaml  rules.yaml  tags.yaml  templates.yaml
knowledge/: genesis.md
scripts/: cleanup_sqlite_journals.sh  intake-trigger.sh
templates/: idea.md  knowledge.md  memory.md
tests/: test_philosophy_integration.py
(+458 files in other folders)
